fixed title sizes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,8 @@ h1 {
 }
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+    line-height: 1.7rem;
     text-transform: uppercase;
     letter-spacing: 0;
     font-weight: 700;
@@ -108,7 +109,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.33rem;
+    font-size: 1.20rem;
     font-weight: 700;
     color: rgba(0, 0, 0, 0.90);
     letter-spacing: 0;
@@ -1205,6 +1206,7 @@ body.color-scheme-laser .sidepanel p a {
 
     h2 {
         font-size: 2.2rem;
+        font-size: 2.3rem;
         margin-bottom: 5rem;
         margin-top: 4rem;
     }
@@ -1272,6 +1274,7 @@ body.color-scheme-laser .sidepanel p a {
 @media (min-width: 992px) {
     h2 {
         font-size: 2.5rem;
+        line-height: 2.6rem;
     }
     .sidepanel-button {
         width: 70%;
